--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "dash_mui",
   "version": "0.0.1",
   "description": "Material UI components for Plotly Dash",
-
   "main": "build/index.js",
   "scripts": {
     "start": "webpack serve --config ./webpack.serve.config.js --open",
@@ -17,6 +16,9 @@
   "author": "Lachlan Teale <lachlan.teale@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.14.15",
     "ramda": "^0.26.1"
   },
   "devDependencies": {
@@ -39,7 +41,7 @@
     "react-docgen": "^5.4.3",
     "react-dom": "^16.8.6",
     "style-loader": "^3.3.3",
-    "styled-jsx": "^3.2.1",
+    "styled-jsx": "^5.1.2",
     "webpack": "^5.84.1",
     "webpack-cli": "^5.1.1",
     "webpack-dev-server": "^4.15.0"
