--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,5 +1,8 @@
 version: 2.1
 
+orbs:
+  browser-tools: circleci/browser-tools@1.4.6
+
 jobs:
   install-dependencies-39:
     working_directory: ~/dash_mui
@@ -12,7 +15,6 @@ jobs:
           PYLINTRC: .pylintrc39
           PYVERSION: python39
           PERCY_ENABLE: 0
-      
     steps:
       - checkout
       - run: echo $PYVERSION > ver.txt
@@ -25,7 +27,7 @@ jobs:
             python -m venv venv && . venv/bin/activate
             pip install --upgrade pip wheel
             set -eo pipefail
-            pip install -e .[ci,dev,testing] --progress-bar off
+            pip install -e .[ci,dev] --progress-bar off
             pip list | grep dash_mui
             npm ci
             npm run build
@@ -50,8 +52,46 @@ jobs:
           paths:
             - dash-package
 
+  lint-39:
+    working_directory: ~/dash_mui
+    docker:
+      - image: cimg/python:3.9.9-node
+        auth:
+          username: dashautomation
+          password: $DASH_PAT_DOCKERHUB
+        environment:
+          PYLINTRC: .pylintrc39
+          PYVERSION: python39
+          PERCY_ENABLE: 0
+    steps:
+      - checkout
+      - run: sudo apt-get update
+      - run: echo $PYVERSION > ver.txt
+      - run: cat requires-*.txt > requires-all.txt
+      - restore_cache:
+          key: dep-{{ checksum ".circleci/config.yml" }}-{{ checksum "ver.txt" }}-{{ checksum "requires-all.txt" }}
+      - run:
+          name: pip dev requirements
+          command: |
+            python -m venv venv && . venv/bin/activate
+            pip install --upgrade pip wheel
+            pip install -e .[ci,dev] --no-cache-dir --progress-bar off
+      - run:
+          name: Python and JS Lint
+          command: |
+            . venv/bin/activate
+            set -eo pipefail
+            pip install -e . --proigress-bar off && pip list | grep dash_mui
+            npm ci npm run initialize
+            npm run build
+            npm run lint
+
 workflows:
   version: 2
   tests:
     jobs:
       - install-dependencies-39
+
+      - lint-39:
+          requires:
+            - install-dependencies-39
