--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "Material UI components for Plotly Dash",
   "main": "build/index.js",
   "scripts": {
+    "private::lint.black": "node -e \"if ((process.env.PYVERSION || 'python39') !== 'python36'){process.exit(1)} \" || black tests --check",
+    "private::lint.flake8": "flake8 tests",
+    "private::lint.pylint": "PYLINTRC=${PYLINTRC:=.pylintrc39} && pylint tests/unit tests/integration -d all --rcfile=$PYLINTRC",
     "start": "webpack serve --config ./webpack.serve.config.js --open",
     "validate-init": "python _validate_init.py",
     "prepublishOnly": "npm run validate-init",
@@ -11,7 +14,8 @@
     "build:backends": "dash-generate-components ./src/lib/components dash_mui -p package-info.json --r-prefix '' --jl-prefix '' --ignore \\.test\\.",
     "build:backends-activated": "(. venv/bin/activate || venv\\scripts\\activate && npm run build:py_and_r)",
     "build": "npm run build:js && npm run build:backends",
-    "build:activated": "npm run build:js && npm run build:backends-activated"
+    "build:activated": "npm run build:js && npm run build:backends-activated",
+    "lint": "run-s private::lint.*"
   },
   "author": "Lachlan Teale <lachlan.teale@gmail.com>",
   "license": "MIT",
@@ -19,6 +23,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.14.15",
+    "npm-run-all": "^4.1.5",
     "ramda": "^0.26.1"
   },
   "devDependencies": {
@@ -36,6 +41,7 @@
     "eslint-config-prettier": "^6.0.0",
     "eslint-plugin-import": "^2.18.0",
     "eslint-plugin-react": "^7.14.2",
+    "husky": "^8.0.3",
     "prop-types": "^15.8.1",
     "react": "^16.8.6",
     "react-docgen": "^5.4.3",
