--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,7 @@ Description: Material UI components for Plotly Dash
 Depends: R (>= 3.0.2)
 Imports: 
 Suggests: 
-License: MIT + file LICENSE
+License: GPLV3 + file LICENSE
 URL: 
 BugReports: 
 Encoding: UTF-8
